Big update, too tired to say what

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,3 +16,6 @@ GlobalDefaultGameMode=/Game/Framework/BP_MegatronGameModeBase.BP_MegatronGameMod
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Megatron")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="MegatronGameModeBase")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
